# dot_product_examples

./: Makefile  README.md
C++/: CMakeLists.txt
C++/bench/: bench_1.cpp  bench_2.cpp  bench_3.cpp  bench_4.cpp  bench_5.cpp
C++/src/include/: dot_product.h
C++/src/lib/: dot_product.cpp
Python/: benchs.py  dot_product.py
Rust/: Cargo.toml
Rust/benches/: multi_thread_1.rs  multi_thread_2.rs  multi_thread_3.rs  multi_thread_4.rs  single_thread_1.rs  single_thread_2.rs  single_thread_3.rs
Rust/src/: lib.rs  multi_thread.rs  number_trait.rs  single_thread.rs
Zig/: build.zig
Zig/bench/: bench_1.zig
Zig/src/: dot_product.zig
